fix spacing intro

--- a/src/projects/ProjectItem.css
+++ b/src/projects/ProjectItem.css
@@ -2,7 +2,7 @@
 
 
 .projectItemContainer {
-    width: 75vw;
+    width: 50vw;
     max-width: 75rem;
     margin: auto auto 40vh;
     display: flex;
@@ -11,7 +11,7 @@
 }
 
 .imageContainer {
-    flex: 0 0 60%;
+    flex: 0 0 55%;
     position: relative;
 }
 
@@ -63,10 +63,10 @@
     text-align: left;
     position: absolute;
     padding: 1rem;
-    font-size: 1.2rem;
+    font-size: .9rem;
     right: 0;
-    width: 50vw;
-    max-width: 50rem;
+    width: 28vw;
+    max-width: 28rem;
 }
 
 .techList {
@@ -76,24 +76,36 @@
     color: rgba(255, 255, 255, 0.65);
     justify-content: space-between;
     font-size: 0.7rem;
-    width: 29vw;
-    max-width: 29rem;
+    width: 22vw;
+    max-width: 22rem;
     right: -0.9rem;
     top: 1.5rem;
 }
 
 @media only screen and (max-width: 1100px) {
+    .projectItemContainer {
+        width: 75vw;
+    }
+
+    .imageContainer {
+        flex: 0 0 60%;
+    }
+
     .projectTitle {
         top: -2.7rem;
         font-size: 1.2rem;
     }
 
     .projectDescription {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
+        width: 40vw;
+        max-width: 40rem;
     }
 
     .techList {
         font-size: 0.45rem;
+        width: 29vw;
+        max-width: 29rem;
     }
 }
 
@@ -146,8 +158,8 @@
 
     .techList {
         font-size: 0.4rem;
-        width: 68vw;
-        max-width: 68rem;
+        width: 66vw;
+        max-width: 30rem;
         right: -0.9rem;
         top: 1.5rem;
     }
